<resources>
    <string name="app_name">乐租小窝</string>
    <string name="do_success">操作成功</string>
    <string name="do_failed">操作失效</string>
    <string name="loading">请求中,请稍候</string>
    <string name="main_main">首页</string>
    <string name="landlord_main_order">订单</string>
    <string name="landlord_main_house">房产</string>
    <string name="main_user">我的</string>
    <string name="login">登录</string>
    <string name="log_in_again">登录失效，请重新登录</string>
    <string name="no_NetworkConnected">网络异常，请检查网络</string>
    <string name="user_name">个人昵称</string>
    <string name="income_profile">收入概况</string>
    <string name="rent_out_income">我的出租收入</string>
    <string name="rent_out_income_title">出租收入</string>
    <string name="withdraw_cash">我的收入提现</string>
    <string name="my_deposit">我的租客押金</string>
    <string name="tenant_deposit">租客押金</string>
    <string name="my_bill">我的账单</string>
    <string name="my_collection">我的催收</string>
    <string name="my_message">我的消息</string>
    <string name="message_detail">消息详情</string>
    <string name="my_order">我的预约</string>
    <string name="switch_tenant">切换租客端</string>
    <string name="setting">设置</string>
    <string name="sum_income">总收入:</string>
    <string name="my_income">我的收入</string>
    <string name="money">￥2000.00</string>
    <string name="withdraw">提现</string>
    <string name="withdraw_record">提现记录</string>
    <string name="withdraw_to">提现至招商银行（8888）</string>
    <string name="yhk">招商银行（8888）</string>
    <string name="to_yhk">到账银行卡</string>
    <string name="select_to">请选择到账银行</string>
    <string name="please_input_withdraw_money">请输入提现金额</string>
    <string name="recharge_money">充值金额</string>
    <string name="withdraw_money">提现金额</string>
    <string name="purse_balance">钱包余额</string>
    <string name="withdraw_balance">可提现余额</string>
    <string name="withdraw_all">全部提现</string>
    <string name="withdraw_into">到账时间银行为准</string>
    <string name="non_payment">未付账单</string>
    <string name="alredy_paid">已付账单</string>
    <string name="order_number_title">订单编号：</string>
    <string name="order_num">2018030422356718</string>
    <string name="non_pay">未付款</string>
    <string name="alredy_pay">已付款</string>
    <string name="text_collection">催房租</string>
    <string name="text_tenant">租客：</string>
    <string name="man">人</string>
    <string name="go_collection">去催租</string>
    <string name="select_all">全选</string>
    <string name="about">关于</string>
    <string name="problem">常见问题</string>
    <string name="login_out">退出登录</string>
    <string name="lease_income">租期总收入:</string>
    <string name="revise_photo">修改头像</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="bind_mobile">修改手机</string>
    <string name="idcard_mobile">身份证号码</string>
    <string name="idcard_date">证件有效期</string>
    <string name="input_idcard">请输入身份证号码</string>
    <string name="idcard_photo">身份证正反面照</string>
    <string name="upload_front">上传正面</string>
    <string name="upload_back">上传背面</string>
    <string name="face_detect">人脸识别</string>
    <string name="user_setting">个人设置</string>
    <string name="tenant_my_despoit">我的押金</string>
    <string name="tenant_manager">租客管理</string>
    <string name="switch_landmore">切换房东端</string>
    <string name="share_app">分享app</string>
    <string name="lock_despoit">门锁押金</string>
    <string name="flow_card_record">流量费记录</string>
    <string name="text_tenant_manager">房客:</string>
    <string name="manager">管理员</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="remove">移除</string>
    <string name="easy_open">一键开锁</string>
    <string name="opening">开门中...</string>
    <string name="open_success">开门成功</string>
    <string name="open_failer">开门失败</string>
    <string name="please_reopen">请重新开门或</string>
    <string name="underline_service">联系客服</string>
    <string name="pay_time">下单时间：</string>
    <string name="time">2017-07-06 19：31</string>
    <string name="rent_type">租金类型</string>
    <string name="pay_type">交租方式</string>
    <string name="rent_despoit">租房押金</string>
    <string name="month_rent">每月房租</string>
    <string name="water_fee">水费</string>
    <string name="ele_fee">电费</string>
    <string name="property_fee">物业管理费</string>
    <string name="lj_fee">垃圾处理费</string>
    <string name="net_fee">网费</string>
    <string name="tenant_mark">历史备注：</string>
    <string name="rent_agreement">租房合同</string>
    <string name="ele_receipt">电子收据</string>
    <string name="order_detail">订单详情</string>
    <string name="select_bank_card">选择银行卡</string>
    <string name="use_new">使用新卡提现</string>
    <string name="add_bank">添加</string>
    <string name="add_bank_title">添加银行卡</string>
    <string name="please_bind_self">请输入提现的银行卡信息</string>
    <string name="please_bind_self_phone">请输入银行卡预留手机号码</string>
    <string name="cardholder">持卡人</string>
    <string name="card_num">卡号</string>
    <string name="please_select_type">请选择银行卡类型</string>
    <string name="bank_ccb">中国建设银行</string>
    <string name="bank_no_support">暂不支持其它银行</string>
    <string name="i_know">我知道了</string>
    <string name="bank_tips_no_support">目前仅支持中国建设银行，暂不支持其它银行，敬请谅解与期待！</string>
    <string name="bank_tips_withdraw">提现的金额固定为钱包所有余额，且每月最多可提现3次。</string>
    <string name="card_type">银行</string>
    <string name="mobile_num">手机号</string>
    <string name="complete">完成</string>
    <string name="please_input_true_name">请输入持卡人姓名</string>
    <string name="please_input_bank_mobile">请输入银行预留手机号</string>
    <string name="please_input_card_num">请输入银行卡号</string>
    <string name="please_input_bank_name">请输入银行名称</string>
    <string name="please_sreading">请大声读出:</string>
    <string name="ver_number">123456</string>
    <string name="start_radio">开始录制</string>
    <string name="click_start_redio">点击开始录制唇语验证码</string>
    <string name="radio_ing">录制中...</string>
    <string name="click_stop_radio">点击停止录制</string>
    <string name="try_look">试看</string>
    <string name="re_radio">重录</string>
    <string name="upload">上传</string>
    <string name="certification">实名认证</string>
    <string name="please_photo_camera">请拍摄以下证件照片，注意避免证件反光</string>
    <string name="idcard_head">上传身份证正面</string>
    <string name="idcard_national_emblem">上传身份证背面</string>
    <string name="immediately_photo">立即拍照</string>
    <string name="please_confirm">请确认以下信息是否与你证件上的一致</string>
    <string name="idcard">身份证</string>
    <string name="text_revise">修改</string>
    <string name="text_change_payway">申请变更交租方式为线下付款,等待房东确认</string>
    <string name="text_agree_change">同意变更</string>
    <string name="text_refunds">确认退款</string>
    <string name="text_wait_refunds">待退款</string>
    <string name="text_refunds_certificate">退款凭证</string>
    <string name="upload_certificate">（上传退款转账截图）</string>
    <string name="text_certificate">保证金将在租客确认退房后方可申请退款</string>
    <string name="certificate_money">确认退款</string>
    <string name="refuse_money">拒绝退款</string>
    <string name="text_last_time">上次交租日期</string>
    <string name="text_next_time">下次交租日期</string>
    <string name="text_agree_apply">同意申请</string>
    <string name="text_change">变更交租方式</string>
    <string name="rent_manager">租客管理</string>
    <string name="checkout_service">退房后，服务期限将提前结束</string>
    <string name="pwd_no_empty">密码不能为空</string>
    <string name="open_door_pwd">开锁密码</string>
    <string name="use_pwd">密码验证</string>
    <string name="revise_pwd">密码修改</string>
    <string name="change_pwd">修改密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="pwd_noempty">密码不能为空</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="revise_lock_pwd">修改开锁密码</string>
    <string name="vercode_txt">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="set_open_pwd">设置开锁密码+</string>
    <string name="balance">钱包余额：</string>
    <string name="sum_record">金额:</string>
    <string name="rmb">￥</string>
    <string name="balance_pay">钱包支付</string>
    <string name="please_balance_pay">是否从钱包余额中扣除</string>
    <string name="no_permissions">未取得相机相关权限，请在手机设置启用相机相关权限后再进行操作</string>
    <string name="pyq">朋友圈</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="tips_del_bank_card">是否删除此银行卡？</string>
    <string name="please_input_pwd_number">请输入6位数字密码</string>
    <string name="please_input_pwd_number_again">请再次输入6位数字密码</string>
    <string name="setting_pwd_number">设置提现密码</string>
    <string name="title_withdraw_pwd">提现密码</string>
    <string name="withdraw_num_tips">本月提取剩余次数</string>
    <string name="withdraw_num_no">本月提取次数已用完，请下个月再申请</string>
    <string name="withdraw_num">（%d次）</string>
    <string name="please_choose_bank_card">请选择提现银行卡</string>
    <string name="no_balance">无提现余额</string>
    <string name="tips_phone_number_">当前手机号：</string>
    <string name="title_check_phone">验证手机</string>
    <string name="title_check_login">验证账号</string>
    <string name="tips_no_to_setting_withdraw_pwd">还没有设置提现密码</string>
    <string name="to_setting">前往设置</string>
    <string name="setting_result_success">设置成功</string>
    <string name="please_input_login_pwd">请输入登录密码</string>
    <string name="please_input_all_info">请输入完整信息</string>
    <string name="title_withdraw_result">提现结果</string>
    <string name="tips_withdraw_result_success">提交成功</string>
    <string name="tips_withdraw_result_tips">预计到账时间1-3天</string>
    <string name="map_find_house">地图找房</string>
    <string name="competitive_house">精品房源</string>
    <string name="competitive_short">热门短租</string>
    <string name="recommend_for_you">为您推荐</string>
    <string name="recommend_for_you_long">长租推荐</string>
    <string name="recommend_for_you_short">短租推荐</string>
    <string name="competitive_house_long">长租房源</string>
    <string name="competitive_house_short">短租房源</string>
    <string name="check_more">查看更多</string>
    <string name="more">更多</string>
    <string name="more_">更多></string>
    <string name="tenant_main_findroom">找房</string>
    <string name="tenant_main_opendoor">开门</string>
    <string name="tenant_main_payrent">订单</string>
    <string name="upload_file">上传合同</string>
    <string name="upload_file_picture">（上传合同文件截图）</string>
    <string name="upload_file_please">上传合同</string>
    <string name="upload_file_ok">确定上传</string>
    <string name="please_text">温馨提示</string>
    <string name="please_upload_complete">上传完成！</string>
    <string name="please_upload_complete_2">系统将在1-3个工作日审核完成。</string>
    <string name="confirm">确定</string>
    <string name="please_input_add_rent_people_">请输入需要添加的账号：</string>
    <string name="please_input_account">请输入账号</string>
    <string name="tips_add_account">注意事项</string>
    <string name="tips_add_account_1">*账号需已进行实名验证；</string>
    <string name="tips_add_account_2">*获得的使用时间与你一致，添加的账号仅有使用</string>
    <string name="common_sure">确定</string>
    <string name="common_commit">提交</string>
    <string name="login_landlord">我是房东</string>
    <string name="login_phone_regist">手机号注册</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_password">密码</string>
    <string name="login_account">账号</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_back">返回切换登录</string>
    <string name="login_pwd_input">0123456789zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>
    <string name="regist_password">密码</string>
    <string name="regist_password_hint">请输入密码</string>
    <string name="regist_password_input_tips">密码格式为6-20位数字或英文字母(区分大小写)</string>
    <string name="forget_password_sure">再次确认</string>
    <string name="forget_password_sure_hint">请再次输入密码</string>
</resources>