<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical"
    tools:context="com.konka.renting.login.RegistActivity">

    <include layout="@layout/include_title_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size_small" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_45"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:digits="@string/login_pwd_input"
            android:hint="@string/regist_password_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/common_light_gray"
            android:textSize="@dimen/common_text_size_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_sure"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size_small" />

        <EditText
            android:id="@+id/edit_password_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:digits="@string/login_pwd_input"
            android:hint="@string/forget_password_sure_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/common_light_gray"
            android:textSize="@dimen/common_text_size_small" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:textColor="@color/text_black"
        android:textSize="@dimen/style_text_tips"
        android:text="@string/regist_password_input_tips"/>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/shape_login_button"
        android:text="@string/common_commit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/common_text_size_middle" />

</LinearLayout>
