<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <include layout="@layout/include_title_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/style_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/please_input_add_rent_people_"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_16" />

    <EditText
        android:id="@+id/activity_add_rent_people_edt_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_22"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:background="@null"
        android:hint="@string/please_input_account"
        android:inputType="number"
        android:maxLength="11"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_marginEnd="@dimen/dp_22"
        android:background="@color/style_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_13"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_17"
        android:text="@string/tips_add_account"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_13"
        android:layout_marginStart="@dimen/dp_17"
        android:text="@string/tips_add_account_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_13"
        android:layout_marginStart="@dimen/dp_17"
        android:text="@string/tips_add_account_2"/>
    
    <TextView
        android:id="@+id/activity_add_rent_people_tv_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/shape_main"
        android:layout_marginTop="@dimen/dp_65"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_16"
        android:text="@string/common_sure"
        android:gravity="center"/>
</LinearLayout>