<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.konka.renting.login.LoginActivity">

    <include layout="@layout/include_title_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size_small"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:inputType="phone"
            android:background="@android:color/transparent"
            android:hint="@string/login_phone_hint"
            android:textSize="@dimen/common_text_size_small"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/common_drivder_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size_small"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="1.0"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:hint="@string/login_password_hint"
            android:textSize="@dimen/common_text_size_small"/>

        <ImageView
            android:id="@+id/iv_show_passowrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@mipmap/icon_show_password"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/common_drivder_line"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/common_text_size_small"
        android:background="@drawable/shape_login_button"
        android:text="@string/login_landlord"
        android:textColor="@android:color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:textColor="@color/common_light_gray"
            android:text="@string/login_phone_regist"/>

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textColor="@color/common_light_gray"
            android:text="@string/login_forget"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_30"
        android:layout_gravity="center_horizontal"
        android:paddingRight="@dimen/dp_30"
        android:text="@string/login_back"
        android:background="@drawable/shape_login_back"
        android:textColor="@color/common_light_gray"/>

</LinearLayout>
