<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/user_bg_card"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_despoit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/color_ffffff"
        android:drawableRight="@mipmap/icon_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_15"
        android:visibility="gone"
        android:text="@string/tenant_my_despoit"
        android:textSize="@dimen/sp_13" />
    <TextView
        android:id="@+id/tv_manager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_ffffff"
        android:drawableRight="@mipmap/icon_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_15"
        android:text="@string/tenant_manager"
        android:textSize="@dimen/sp_13" />
    <TextView
        android:id="@+id/tv_lock_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_ffffff"
        android:drawableRight="@mipmap/icon_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_15"
        android:text="@string/open_door_pwd"
        android:textSize="@dimen/sp_13" />
    <TextView
        android:id="@+id/tv_switch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_ffffff"
        android:drawableRight="@mipmap/icon_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_15"
        android:text="@string/switch_landmore"
        android:textSize="@dimen/sp_13" />
    <TextView
        android:id="@+id/tv_share_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_ffffff"
        android:drawableRight="@mipmap/icon_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_15"
        android:text="@string/share_app"
        android:textSize="@dimen/sp_13" />
    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_ffffff"
        android:drawableRight="@mipmap/icon_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/setting"
        android:textSize="@dimen/sp_13" />

</LinearLayout>