<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<LinearLayout
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:layout_centerInParent="true"
    android:background="@drawable/background_blur"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/please_upload_complete"
        android:textColor="@color/color_000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_upload_complete_2"
        android:textColor="@color/color_000000"/>
    <Button
        android:id="@+id/pop_upload_success_btn_confirm"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:textColor="@color/color_ffffff"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:background="@drawable/selector_login_btn"/>
</LinearLayout>
</RelativeLayout>